force-app/main/default/objects/Activity/fields/Send_SMS_Notification_Now__c.field-meta.xml
<CustomField>
    <fullName>Send_SMS_Notification_Now__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Immediately sends an SMS notification with details of the Event to the participant. No message will be sent if the participant&apos;s Mobile Phone is not set or is invalid, or if the Event is in the past.</description>
    <inlineHelpText>Immediately sends an SMS notification with details of the Event to the participant. No message will be sent if the participant&apos;s Mobile Phone is not set or is invalid, or if the Event is in the past.</inlineHelpText>
    <label>Send SMS Notification Now</label>
    <type>Checkbox</type>
</CustomField>