force-app/main/default/objects/Activity/fields/Send_SMS_on_Creation__c.field-meta.xml
<CustomField>
    <fullName>Send_SMS_on_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If ticked, an SMS notification will be sent to the Contact. This has no effect if updated after a record has been created. To resend an SMS notification, use the action button instead.</description>
    <inlineHelpText>If ticked, an SMS notification will be sent to the Contact. This has no effect if updated after a record has been created. To resend an SMS notification, use the action button instead.</inlineHelpText>
    <label>Send SMS on Creation</label>
    <type>Checkbox</type>
</CustomField>