force-app/main/default/objects/Activity/fields/SMS_Reminder_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>SMS_Reminder_Date_Time__c</fullName>
    <formula>IF(
    ISBLANK(SMS_Reminder_Time_Offset__c) || ISPICKVAL(SMS_Reminder_Time_Unit__c, &quot;&quot;) || ISBLANK(ActivityDateTime),
    NULL,
    IF(
        ISPICKVAL(SMS_Reminder_Time_Unit__c, &quot;Hours Before&quot;),
        ActivityDateTime - (SMS_Reminder_Time_Offset__c / 24),
        ActivityDateTime - SMS_Reminder_Time_Offset__c
    )
)</formula>
    <label>SMS Reminder Date/Time</label>
    <type>DateTime</type>
</CustomField>