force-app/main/default/objects/Activity/fields/SMS_Reminder_Time__c.field-meta.xml
<CustomField>
    <fullName>SMS_Reminder_Time__c</fullName>
    <description>Schedules an SMS reminder to be sent to the Event&apos;s participant. No message will be sent if the participant&apos;s Mobile Phone is not set or is invalid, or if the selected time is in the past.</description>
    <inlineHelpText>Schedules an SMS reminder to be sent to the Event&apos;s participant. No message will be sent if the participant&apos;s Mobile Phone is not set or is invalid, or if the selected time is in the past.</inlineHelpText>
    <label>SMS Reminder Time</label>
    <type>DateTime</type>
</CustomField>