force-app/main/default/objects/Activity/fields/SMS_Reminder_Time_Offset__c.field-meta.xml
<CustomField>
    <fullName>SMS_Reminder_Time_Offset__c</fullName>
    <description>The number of hours/days before the Start date/time to send the SMS Reminder.</description>
    <inlineHelpText>The number of hours/days before the Start date/time to send the SMS Reminder.</inlineHelpText>
    <label>SMS Reminder Time Offset</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>