force-app/main/default/objects/Activity/fields/SMS_Reminder_Time_Unit__c.field-meta.xml
<CustomField>
    <fullName>SMS_Reminder_Time_Unit__c</fullName>
    <description>The unit (minutes / hours / days) to apply to the SMS Reminder Time Offset.</description>
    <inlineHelpText>The unit (minutes / hours / days) to apply to the SMS Reminder Time Offset.</inlineHelpText>
    <label>SMS Reminder Time Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minutes Before</fullName>
            </value>
            <value>
                <fullName>Hours Before</fullName>
            </value>
            <value>
                <fullName>Days Before</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>